# nautilus-sendto

./: 0001-main-Fix-warnings-when-no-mail-client-is-installed.patch  Makefile  README.md  nautilus-sendto-3.8.0-EL7.3_translations.patch  nautilus-sendto.spec  translations.patch
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  configure.in  meson.build  nautilus-sendto.1  nautilus-sendto.doap
src/docs/: Makefile.in
src/docs/nautilus-sendto/: Makefile.in  nautilus-sendto-sections.txt
src/docs/nautilus-sendto/html/: api-index-full.html  ch01.html  index.html  index.sgml  nautilus-sendto-nautilus-sendto-plugin.html  nautilus-sendto.devhelp  nautilus-sendto.devhelp2
src/docs/nautilus-sendto/tmpl/: nautilus-sendto-plugin.sgml  nautilus-sendto-unused.sgml  nst-enum-types.sgml
src/docs/nautilus-sendto/xml/: api-index-full.xml  nautilus-sendto-plugin.xml  nst-common.xml  nst-enum-types.xml
src/evolution/: Makefile.in
src/po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  (+49 more)
src/src/: Makefile.am  Makefile.in  meson.build  nautilus-sendto.c  nautilus-sendto.metainfo.xml.in  nst-enum-types.c  nst-enum-types.h
src/src/plugins/: Makefile.in
src/src/plugins/bluetooth/: Makefile.in  bluetooth-marshal.c  bluetooth-marshal.h
src/src/plugins/empathy/: Makefile.in
src/src/plugins/evolution/: Makefile.in  econtactentry-marshal.c
src/src/plugins/gajim/: Makefile.in
src/src/plugins/nautilus-burn/: Makefile.in
src/src/plugins/pidgin/: Makefile.in
src/src/plugins/removable-devices/: Makefile.in
src/src/plugins/upnp/: Makefile.in
